# rtorrent-remote

./: .~lock.README.md#  .~lock.changelog.md#  Cargo.toml  README.md  changelog.md
src/: clistruct.rs  hashmap.rs  istorrentvalidator.rs  listofxmlmethodsrtorrent.txt  main.rs  printer.rs  printing.rs  structprintabletorrentinfo.rs  tempfile.rs  torrentfromstring.rs  torrentstructs.rs  vechelp.rs  xmlrpcbuilder.rs  xmlrpchelper.rs
src/tempfile/: deserCompare.rs
transmission-remote-help-and-man-page/: transmission-remote-help.txt  transmission-remote-manpage.txt
