[package]
name = "rtorrent-remote"
description = "A port of transmission-remote to rtorrent"
version = "0.4.2"
edition = "2021"
authors = ["Brian A Barnes-Cocke <babarnescocke@gmail.com>"]
readme = "README.md"
keywords = ["rtorrent", "xml-rpc"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
url = "2.2"
rtorrent-xmlrpc-bindings = { path = "../rtorrent-xmlrpc-bindings"}
compound_duration = "1.2.0"
comfy-table = "5.0.1"
crc = "2"
bincode = "1"
text_io = "0.1"
base64 = "0.13.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
