[package]
name = "rtorrent-remote"
description = "A CLI utility for rtorrent, in the style of transmission-remote"
version = "0.4.2"
edition = "2021"
authors = ["Brian A Barnes-Cocke <babarnescocke@gmail.com>"]
readme = "README.md"
keywords = ["rtorrent", "xml-rpc", "torrent"]
categories = ["command-line-utilities"]
homepage = "https://github.com/babarnescocke/rtorrent-remote"
repository = "https://github.com/babarnescocke/rtorrent-remote"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
url = "2.2"
rtorrent-xmlrpc-bindings = { path = "../rtorrent-xmlrpc-bindings"}
compound_duration = "1.2.0"
comfy-table = "5.0.1"
crc = "2"
bincode = "1"
text_io = "0.1"
base64 = "0.13.0"
zstd = "0.11"
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-unknown-linux-musl]
target.x86_64-unknown-linux-musl.linker = "ld"
target.x86_64-unknown-linux-musl.rustflags = ["-Ctarget-feature=-crt-static", "-Clink-self-contained=on", "-L/usr/lib/x86_64-linux-musl", "-Clink-args=--dynamic-linker /lib/ld-musl-x86_64.so.1"]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = 'symbols'   # Strip symbols, but not debuginfo
